# mks

./: .gitignore  Cargo.toml  Makefile  README.md  cliff.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: quality-gate.yml  release.yml
docker/: Dockerfile  compose.yml  non-root-apparmor.profile
src/: functions.rs  lib.rs  main.rs
tests/: create_folders.rs  create_folders_integration.rs  create_folders_unit.rs  dotenvy_unit.rs
