[package]
name = "mks"
description = "Skaffolding utility to create folder structures for different purposes"
documentation = "https://github.com/jd-apprentice/mks/blob/master/README.md"
repository = "https://github.com/jd-apprentice/mks"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dotenvy = "0.15.7"
sentry = "0.34.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.13"